# saplings

./: .flake8  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CLI_INTERFACE_GUIDE.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCUMENTATION_VALIDATION_SUMMARY.md  ERROR_HANDLING_GUIDE.md  EXAMPLES.md  GASA_GUIDE.md  GETTING_STARTED.md  MONITORING_OBSERVABILITY_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECURITY_PRIVACY_GUIDE.md  SERVICES_API_GUIDE.md  SERVICE_BUILDERS_GUIDE.md  TESTING_GUIDE.md  pyproject.toml  pyrightconfig.json  pytest.ini  test_import.py
.github/workflows/: ci.yml  run-tests.yml  test.yml  tests.yml
benchmarks/: faiss_benchmark.py  gasa_benchmark.py
docs/: README.md  advanced_features.md  agent.md  api_reference.md  cascade_retriever.md  core_concepts.md  dependency_injection.md  examples.md  execution.md  executor.md  gasa.md  gasa_third_party.md  getting_started.md  hot_loading.md  judge.md  judge_executor_integration.md  judge_executor_quickstart.md  judge_executor_technical_reference.md  mcp_client.md  memory.md  memory_store.md  modality.md  model_adapters.md  model_caching.md  monitoring.md  orchestration.md  planner.md  planning.md  quick_start.md  retrieval.md  security_guidelines.md  self_heal.md  self_healing.md  tool_factory.md  tools.md  validator.md
docs/judge/: rubrics.md
examples/: 01_basic_agent_usage.py  02_advanced_agent_usage.py  03_gasa_openai_example.py  04_gasa_qwen3_transformers_example.py  05_code_repo_assistant.py  06_dynamic_tool_creation.py  07_faiss_vector_store_example.py  README.md  __init__.py  advanced_features_example.py  advanced_function_features.py  advanced_gasa_visualization.py  agent_example.py  basic_agent_setup.py  basic_tool_usage.py  code_repository_assistant.py  dependency_injection_example.py  dynamic_tool_creation.py  enhanced_orchestration_example.py  faiss_vector_store_example.py  full_agent_example.py  function_registry_example.py  gasa_test.py  gasa_visualization_example.py  hot_loading_example.py  model_caching_example.py  model_caching_performance.py  multimodal_agent.py  multiple_document_types.py  optimized_gasa_packing_example.py  orchestration_example.py  qwen3_infographic_agent.py  qwen3_infographic_agent_single.py  research_paper_analyzer.py  sandbox_tool_example.py  secure_hot_loading_example.py  self_healing_example.py  self_healing_monitor.py  self_hosted_qwen3.py  self_improving_agent.py  (+2 more)
examples/advanced_agent_output/: task_results_20250602_185609.json  task_results_20250602_190646.json
examples/agent_output/: task_results_20250602_184841.json  task_results_20250602_185456.json  task_results_20250602_190339.json  task_results_20250602_190428.json  task_results_20250602_190455.json  task_results_20250602_190541.json  task_results_20250602_190701.json
examples/rubrics/: infographic_rubric.json
scripts/: audit_api_exports.py  cc_check.py  check_api_imports.py  check_api_stability.py  check_circular_imports.py  check_examples_api_usage.py  check_module_stability.py  check_stability.py  check_stability_annotations.py  find_missing_annotations.py  run_first_format.sh  run_quality_checks.sh  setup_dev_env.sh
src/saplings/: __init__.py  __init__.py.backup  agent.py  agent_config.py  agent_facade.py  container.py  container_config.py  container_hooks.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_di_container.py
tests/adapters/: __init__.py  test_advanced_features.py  test_anthropic_adapter.py  test_base.py  test_factory.py  test_huggingface_adapter.py  test_integration.py  test_openai_adapter.py  test_vllm_adapter.py
tests/api/: test_api_imports.py
tests/benchmarks/: README.md  __init__.py  base_benchmark.py  test_comparison_benchmark.py  test_datasets.py  test_executor_benchmark.py  test_faiss_benchmark.py  test_gasa_benchmark.py  test_retrieval_benchmark.py  test_self_heal_benchmark.py
tests/core/: test_function_authorization.py  test_function_caching.py  test_function_logging.py  test_function_registry.py  test_function_validation.py  test_llm_caching.py  test_message.py  test_model_adapter.py  test_model_caching.py  test_model_uri.py  test_parallel_function.py  test_plugin.py  test_plugin_system.py  test_streaming_function.py
tests/e2e/: test_agent_workflow.py  test_api_documentation.py  test_comprehensive_integration.py  test_example_validation.py  test_publication_readiness.py  test_security_review.py  test_tool_integration.py
tests/end_to_end/: test_complete_workflow.py
tests/examples/: __init__.py  test_qwen3_infographic_agent.py  test_vllm_example.py
tests/executor/: test_executor.py
tests/gasa/: __init__.py  test_block_packing.py  test_config.py  test_flop_reduction.py  test_gasa_integration.py  test_mask_builder.py  test_visualization.py
tests/integration/: __init__.py  conftest.py  test_agent.py  test_cross_component.py  test_faiss_integration.py  test_gasa_integration.py  test_gasa_production.py  test_hot_loading.py  test_minimal_agent.py  test_model_adapters.py  test_service_interactions.py  test_simplified_agent_creation.py  test_vllm_comprehensive.py
tests/judge/: __init__.py  test_judge_agent.py  test_judge_with_rubric.py  test_rubric.py
tests/memory/: test_document.py  test_graph.py  test_indexer.py  test_memory_store.py  test_vector_store.py
tests/monitoring/: test_blame_graph.py  test_langsmith.py  test_trace.py  test_trace_viewer.py  test_visualization.py
tests/orchestration/: __init__.py  test_config.py  test_graph_runner.py
tests/planner/: test_base_planner.py  test_budget_enforcement.py  test_config.py  test_cost_heuristics.py  test_plan_optimization.py  test_plan_step.py  test_sequential_planner.py  test_task_splitting.py
tests/plugins/: test_plugin_entrypoints.py
tests/retrieval/: test_cascade_retriever.py  test_embedding_retriever.py  test_entropy_calculator.py  test_graph_expander.py  test_tfidf_retriever.py
tests/safety/: __init__.py  test_self_healing_safety.py
tests/security/: test_api_key_protection.py  test_log_filter.py  (+2 more)
(+863 files in other folders)
