[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "saplings"
version = "0.2.0"
description = "A graphs-first, self-improving agent framework"
authors = [
    {name = "Jacob Warren", email = "jacob.paul.warren@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9,<3.13"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/jacobwarren/saplings"
Documentation = "https://github.com/jacobwarren/saplings/docs"

[tool.poetry]
packages = [{include = "saplings", from = "src"}]

# Dependencies are defined in tool.poetry.dependencies for now

[project.optional-dependencies]
lora = ["transformers>=4.30.0", "datasets>=2.13.0", "torch>=2.0.0", "peft>=0.5.0", "accelerate>=0.20.0", "bitsandbytes>=0.40.0"]
vllm = ["vllm>=0.8.5"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.8.0"]
huggingface = ["transformers>=4.30.0", "torch>=2.0.0"]
monitoring = ["langsmith>=0.0.60"]
viz = ["matplotlib>=3.5.0", "plotly>=5.5.0"]
all = ["transformers>=4.30.0", "datasets>=2.13.0", "torch>=2.0.0", "peft>=0.5.0", "accelerate>=0.20.0", "bitsandbytes>=0.40.0", "vllm>=0.8.5", "openai>=1.0.0", "anthropic>=0.8.0", "langsmith>=0.0.60", "matplotlib>=3.5.0", "plotly>=5.5.0"]

[tool.poetry.dependencies]
# Keep this for backward compatibility with Poetry 1.x
python = ">=3.9,<3.13"
numpy = "^1.24.0"
pydantic = "^2.0.0"
networkx = "^3.0"
requests = "^2.28.0"
importlib-metadata = "^6.0.0"
scikit-learn = "^1.2.0"
sentence-transformers = "^2.2.2"
pandas = "^2.0.0"
scipy = "^1.10.0"
pyyaml = "^6.0.0"
aiohttp = "^3.8.0"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.13.4"
pypdf = "^4.0.0"
arxiv = "^2.0.0"

# Optional dependencies for LoRA fine-tuning
transformers = {version = "^4.30.0", optional = true}
datasets = {version = "^2.13.0", optional = true}
torch = {version = "^2.0.0", optional = true}
peft = {version = "^0.5.0", optional = true}
accelerate = {version = "^0.20.0", optional = true}
bitsandbytes = {version = "^0.40.0", optional = true}

# Optional dependencies for model adapters
vllm = {version = "^0.8.5", optional = true}
openai = {version = "^1.0.0", optional = true}
anthropic = {version = "^0.8.0", optional = true}
langsmith = {version = "^0.0.60", optional = true}

# Optional dependencies for visualization
matplotlib = {version = "^3.5.0", optional = true}
plotly = {version = "^5.5.0", optional = true}

# Dev and test dependencies are defined in tool.poetry.group.*.dependencies for now

# Keep these for backward compatibility with Poetry 1.x
[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-timeout = "^2.2.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.1"
docker = "^6.1.0"
pylint = "^2.17.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.2.0"

[tool.poetry.group.lora.dependencies]
transformers = "^4.30.0"
datasets = "^2.13.0"
torch = "^2.0.0"
peft = "^0.5.0"
accelerate = "^0.20.0"
bitsandbytes = "^0.40.0"

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.5.0"
plotly = "^5.5.0"

# Build system is defined at the top of the file

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--timeout=60"

[tool.pytest.ini_options.markers]
nocov = "Skip coverage for this test"
benchmark = "Mark test as a benchmark test"
timeout = "Mark a test with a timeout in seconds"

[project.entry-points."saplings.model_adapters"]
vllm = "saplings.adapters.vllm_adapter:VLLMAdapter"
openai = "saplings.adapters.openai_adapter:OpenAIAdapter"
anthropic = "saplings.adapters.anthropic_adapter:AnthropicAdapter"
huggingface = "saplings.adapters.huggingface_adapter:HuggingFaceAdapter"

[project.entry-points."saplings.memory_stores"]
secure = "saplings.plugins.memory_stores:SecureMemoryStore"

[project.entry-points."saplings.validators"]
code = "saplings.plugins.validators:CodeValidator"
factual = "saplings.plugins.validators:FactualValidator"

[project.entry-points."saplings.indexers"]
code = "saplings.plugins.indexers:CodeIndexer"

# Keep these for backward compatibility with Poetry 1.x
[tool.poetry.plugins."saplings.model_adapters"]
vllm = "saplings.adapters.vllm_adapter:VLLMAdapter"
openai = "saplings.adapters.openai_adapter:OpenAIAdapter"
anthropic = "saplings.adapters.anthropic_adapter:AnthropicAdapter"
huggingface = "saplings.adapters.huggingface_adapter:HuggingFaceAdapter"

[tool.poetry.plugins."saplings.memory_stores"]
secure = "saplings.plugins.memory_stores:SecureMemoryStore"

[tool.poetry.plugins."saplings.validators"]
code = "saplings.plugins.validators:CodeValidator"
factual = "saplings.plugins.validators:FactualValidator"

[tool.poetry.plugins."saplings.indexers"]
code = "saplings.plugins.indexers:CodeIndexer"

# Inference dependencies are now in the main dependencies section with optional=true

# Extras are now defined in project.optional-dependencies
